maj changement de fragment via la barre de navigation

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@color/white"
     tools:context=".Gallery">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,5 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/gallery_fragment"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="@string/gallery_fragment"
+        android:textSize="40sp"
+        android:gravity="center"
+        android:background="@color/green"/>
 
 </FrameLayout>
