--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:text="Home Page"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:layout_gravity="center"/>
+
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
