--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Trip">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/trip_fragment" />
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="@string/trip_fragment"
+        android:textSize="40sp"
+        android:gravity="center"
+        android:background="@color/green"/>
 
 </FrameLayout>
