--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/white"
     tools:context=".Gallery">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_gallery"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/gallery_fragment"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/gallery_fragment"
-        android:textSize="40sp"
+        android:textSize="25sp"
         android:gravity="center"
         android:background="@color/green"/>
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+
+</LinearLayout>
