--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/gallery_fragment"
-        android:textSize="25sp"
+        android:textSize="@dimen/text_size_large"
         android:gravity="center"
         android:background="@color/green"/>
 
