création d'une cardview pour chaque voyage crée création d'un fichier à remplacer par un dossier modifier la création de cardview pour chaque dossier déjà présent dans la firebase

--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -14,6 +14,12 @@
         android:gravity="center"
         android:background="@color/green"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tripRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"/>
+
     <ImageButton
         android:id="@+id/add_trip_button"
         android:layout_width="50dp"
