--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
+    android:id="@+id/fragment_trip"
     tools:context=".Trip">
 
     <TextView
@@ -18,17 +20,30 @@
         android:id="@+id/tripRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp"/>
+        android:layout_marginBottom="?attr/actionBarSize"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        tools:ignore="NotSibling" />
 
     <ImageButton
         android:id="@+id/add_trip_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="670dp"
+        android:layout_marginTop="600dp"
         android:layout_marginStart="10dp"
         android:background="@color/green"
         android:contentDescription="@string/add_trip_button_desc"
         android:foreground="?android:attr/selectableItemBackground"
         android:src="@drawable/baseline_add_24" />
+
+    <ImageButton
+        android:id="@+id/refresh_trip_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="670dp"
+        android:layout_marginStart="10dp"
+        android:background="@color/green"
+        android:contentDescription="rafraichissement de l'affichage des voyages"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:src="@drawable/refresh_icon" />
 
 </RelativeLayout>
