--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -9,6 +9,7 @@
     tools:context=".Trip">
 
     <TextView
+        android:id="@+id/fragment_trip_title"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/trip_fragment"
@@ -21,6 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="?attr/actionBarSize"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_trip_title"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
         tools:ignore="NotSibling" />
 
