--- a/app/src/main/res/layout/trip_item_layout.xml
+++ b/app/src/main/res/layout/trip_item_layout.xml
@@ -2,8 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
     android:layout_height="150dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="30dp"
-    android:layout_marginTop="80dp">
+    android:layout_marginTop="10dp"
+    app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">
 
     <LinearLayout
         android:layout_width="match_parent"
