modification options à faire: implémenter les différentes options

--- a/app/src/main/res/layout/trip_item_layout.xml
+++ b/app/src/main/res/layout/trip_item_layout.xml
@@ -14,9 +14,10 @@
 
         <TextView
             android:id="@+id/tripNameTextView"
-            android:layout_width="300dp"
+            android:layout_width="275dp"
             android:layout_height="50dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
             android:text="@string/trip_name"
             android:textSize="30sp" />
 
@@ -24,13 +25,32 @@
             android:id="@+id/options_button"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="290dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/blue"
+            android:layout_marginStart="300dp"
+            android:background="@color/red"
             android:contentDescription="@string/trip_options_button_desc"
             android:src="@drawable/three_dots_vertical"/>
+
+        <ImageButton
+            android:id="@+id/preview_photos_button"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:background="@color/blue"
+            android:layout_marginStart="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/baseline_photo_library_24"
+            android:contentDescription="@string/preview_trip_desc" />
+
+        <ImageButton
+            android:id="@+id/add_photos_button"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"
+            android:background="@color/blue"
+            android:layout_marginStart="160dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/baseline_add_a_photo_24"
+            android:contentDescription="@string/add_photos_desc" />
 
 
     </RelativeLayout>
