--- a/app/src/main/res/layout/fragment_preview_photos.xml
+++ b/app/src/main/res/layout/fragment_preview_photos.xml
@@ -19,7 +19,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="3" />
+        app:spanCount="3"
+        android:elevation="8dp"/>
 
 
 </LinearLayout>
