implémentation des markers sur la map non terminé probleme d'ajout de photos d'un voyage, suppression , rennomage

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="red">#e8a0a0</color>
     <color name="blue">#a0e4e8</color>
     <color name="green">#a0e8af</color>
+    <color name="dark_green">#123524</color>
 </resources>
