--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="red">#e8a0a0</color>
     <color name="blue">#a0e4e8</color>
     <color name="green">#a0e8af</color>
-    <color name="dark_green">#123524</color>
+    <color name="grey">#D8D5D4</color>
+    <color name="light_green">#b4fcb7</color>
+
 </resources>
