--- a/app/src/main/res/layout/dialog_add_trip.xml
+++ b/app/src/main/res/layout/dialog_add_trip.xml
@@ -9,21 +9,23 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:gravity="center"
+        android:padding="16dp"
         android:text="@string/dialog_add_trip_text"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:padding="16dp"/>
+        android:textStyle="bold" />
 
     <!-- Champ de saisie pour le nom du voyage -->
     <EditText
         android:id="@+id/editTextTripName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints=""
+        android:fontFamily="monospace"
         android:hint="@string/edit_trip_name_text"
         android:inputType="text"
-        android:padding="16dp"
-        android:autofillHints="" />
+        android:padding="16dp" />
 
     <!-- Boutons de la boîte de dialogue -->
     <LinearLayout
@@ -39,23 +41,25 @@
         <!-- Bouton Annuler -->
         <Button
             android:id="@+id/buttonCancel"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cancel_button_text"
             android:layout_marginEnd="8dp"
             android:background="@color/green"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:fontFamily="monospace"
+            android:text="@string/cancel_button_text" />
 
 
         <!-- Bouton Ajouter -->
         <Button
             android:id="@+id/buttonAddTrip"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_button_text"
             android:layout_marginEnd="8dp"
             android:background="@color/green"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:fontFamily="monospace"
+            android:text="@string/add_button_text" />
 
     </LinearLayout>
 </LinearLayout>
