--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -11,10 +11,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:text="@string/gallery_fragment"
-        android:textSize="@dimen/text_size_large"
+        android:background="@color/green"
+        android:fontFamily="monospace"
         android:gravity="center"
-        android:background="@color/green"/>
+        android:text="@string/gallery_fragment"
+        android:textSize="@dimen/text_size_large" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
