--- a/app/src/main/res/layout/fragment_preview_photos.xml
+++ b/app/src/main/res/layout/fragment_preview_photos.xml
@@ -8,10 +8,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:text="@string/preview_photos_title"
-        android:textSize="@dimen/text_size_large"
+        android:background="@color/green"
+        android:fontFamily="monospace"
         android:gravity="center"
-        android:background="@color/green"/>
+        android:text="@string/preview_photos_title"
+        android:textSize="@dimen/text_size_large" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
