--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/grey"
+    android:background="@color/white"
     android:id="@+id/fragment_trip"
     tools:context=".Trip">
 
@@ -12,10 +12,11 @@
         android:id="@+id/fragment_trip_title"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:text="@string/trip_fragment"
-        android:textSize="@dimen/text_size_large"
+        android:background="@color/green"
+        android:fontFamily="monospace"
         android:gravity="center"
-        android:background="@color/green"/>
+        android:text="@string/trip_fragment"
+        android:textSize="@dimen/text_size_large" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tripRecyclerView"
