--- a/app/src/main/res/layout/trip_item_layout.xml
+++ b/app/src/main/res/layout/trip_item_layout.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_green">
+        android:background="@color/grey">
 
         <TextView
             android:id="@+id/tripNameTextView"
@@ -19,6 +19,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
+            android:fontFamily="monospace"
             android:text="@string/trip_name"
             android:textSize="30sp" />
 
@@ -27,7 +28,7 @@
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginStart="300dp"
-            android:background="@color/light_green"
+            android:background="@color/grey"
             android:contentDescription="@string/trip_options_button_desc"
             android:src="@drawable/three_dots_vertical"/>
 
@@ -35,7 +36,7 @@
             android:id="@+id/preview_photos_button"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
-            android:background="@color/light_green"
+            android:background="@color/grey"
             android:layout_marginStart="30dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
@@ -46,7 +47,7 @@
             android:id="@+id/add_photos_button"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
-            android:background="@color/light_green"
+            android:background="@color/grey"
             android:layout_marginStart="150dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
